# doc-research-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ui.py
src/: config.py  main.py
src/api/: routes.py  schemas.py
src/api/handlers/: query.py  upload.py
src/core/: agent.py  document_processor.py  graders.py  nodes.py  prompts.py  search.py  state.py  tools.py  vector_store.py
src/core/document_processing/: document_processor.py  text_processor.py
src/core/evaluation/: metrics.py
src/core/grading/: graders.py
src/core/retrieval/: bm25_indexer.py  fusion_retriever.py  search.py  tokenizer.py
src/guardrails/: config.yml  guardrails_wrapper.py
src/guardrails/rails/: dialog.co  general.co  input.co  output.co
src/utils/: logger.py
